[package]
name = "keta-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
clap = "2.33.3"
keta-core = { path = "../keta-core" }
keta-crypto = { path = "../keta-crypto" }
keta-rpc = { path = "../keta-rpc", features = ["client"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.27"
tracing-subscriber = "0.2.22"
url = "2.2.2"
