[package]
name = "keta-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keta-crypto = { path = "../keta-crypto" }
hex = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.3"
