[package]
name = "keta-crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1.0.3", package = "votate-ed25519-dalek" }
hex = "0.4.3"
rand = "0.8.4"
serde = "1.0.130"
thiserror = "1.0.29"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
