[package]
name = "keta-miner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keta-core = { path = "../keta-core" }
keta-crypto = { path = "../keta-crypto" }
lazy_static = "1.4.0"
num-bigint = "0.4.2"
