[package]
name = "keta-node-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keta-core = { path = "../keta-core", features = ["sled-types"] }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.29"
