[package]
name = "keta-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keta-core = { path = "../keta-core" }
keta-rpc = { path = "../keta-rpc" }
keta-miner = { path = "../keta-miner" }
keta-node-db = { path = "../keta-node-db" }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.44"
clap = "2.33.3"
xdg = "2.2.0"
thiserror = "1.0.29"
tracing = "0.1.27"
tracing-subscriber = "0.2.22"
