[package]
name = "keta-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keta-core = { path = "../keta-core" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
thiserror = "1.0.29"

[features]
client-http = ["jsonrpc-core-client/http"]
