[package]
name = "keta-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keta-core = { path = "../keta-core" }
thiserror = "1.0.29"
tokio = { version = "1.11.0", optional = true }
url = { version = "2.2.2", optional = true }
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
jsonrpsee = { version = "0.3.0", features = ["types", "macros"] }
serde_json = "1.0.68"

[features]
client = ["jsonrpsee/client", "jsonrpsee/ws-client", "url"]
server = ["jsonrpsee/server", "jsonrpsee/ws-server", "tokio"]
